Fixed text-wrap and sizings for various texts / sections.

--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@ h2 {
 
 @media screen and (max-width: 767px) {
     h1 {
-        font-size: 50px;
+        font-size: 40px;
         text-align: center;
     }
 
@@ -186,6 +186,15 @@ h2 {
     content: '';
 }
 
+@media screen and (max-width: 576px) {
+    .partner-back-glow {
+        bottom: -10%;
+        box-shadow: 0px 0px 500px 250px rgba(19, 97, 160, 0.2);
+        /*box-shadow: 0px 0px 500px 350px rgba(54, 88, 117, 0.2);*/
+        content: '';
+    }
+}
+
 #security-blurb {
     font-family: 'karla';
     font-size: 15px;
@@ -222,6 +231,11 @@ h2 {
 
 #customers-container {
     border-top: 1px solid rgba(255, 255, 255, 0.2);
+}
+
+.customer-img {
+    max-width: 150px;
+    padding: 0 10px 0 10px;
 }
 
 .fade-in {
